OpenJMLTest/test/linkedBug/expected
test/linkedBug/Linked.java:16: error: cannot find symbol
    //@   ensures this.links.equals(oldlinks.prepend(this.next));
                                    ^
  symbol:   variable oldlinks
  location: class Linked
test/linkedBug/Linked.java:18: error: cannot find symbol
	    var b = this.jlinks.equals(oldjlinks.prepend(this.next));
	                               ^
  symbol:   variable oldjlinks
  location: class Linked
Operation not performed because of parse or type errors
2 errors
